--- a/templates/WhatImDoing_withCSS.html
+++ b/templates/WhatImDoing_withCSS.html
@@ -5,9 +5,10 @@
         <!-- important to note, that the location of filename by default, is going to look for things in a 'static' folder -->
     </head>
     <body>
-        <h1> This is a header</h1>
-        <button> Click 1 </button>
-        <button class="specialButton1"> Click 2</button>
-        <p> This is a paragraph</p>
+        <h1> Still don't know WhatWeDoing?</h1>
+        <button> Then press here</button>
+        <button class="specialButton1"> If you do then press here</button>
+        <p> We're going to figure it out, I assure you</p>
+        <img src="https://imgix.bustle.com/scary-mommy/2020/06/Steve-Carell-The-Office.jpg?w=740&h=389&fit=crop&crop=faces&auto=format%2Ccompress&q=50&dpr=2" alt="Mac" width="900" height="550">
     </body>
 </html>
