--- a/templates/WhatWeDoing_noCSS.html
+++ b/templates/WhatWeDoing_noCSS.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        <h1> This is a header</h1>
-        <button> This is a button</button>
-        <p> This is a paragraph</p>
+        <h1> Welcome, please let let me know WhatWeDoing?</h1>
+        <button> If you know WhatWeDoing, press here</button>
+        <p> Don't worry, we'll figure out WhatWeDoing</p>
+        <img src="https://www.meme-arsenal.com/memes/51a3d958dfb6f3251522d5c2838b63d7.jpg" alt="Same huh?">
     </body>
 </html>
