--- a/templates/WhatYouDoing_withCSS_layout.html
+++ b/templates/WhatYouDoing_withCSS_layout.html
@@ -8,7 +8,12 @@
     <body>
 
         <header>
-            <h3>Applied Health Informatics</h3>
+            <h3>Hey, We know WhatWeDoing</h3>
         </header>
+        <p>However, if you need additional help, visit the link below</p>
+        <a href="https://www.w3schools.com/html/default.asp">
+            <button>w3schools</button>
+        </a>
+        <img src="https://c.tenor.com/5RjV8Wgndb8AAAAC/kevin-the-office.gif">
     </body>
 </html>
