--- a/static/styles.css
+++ b/static/styles.css
@@ -5,17 +5,19 @@ body {
     color: darkolivegreen;
 }
 h1 {
-    font-size: 2em;
+    font-size: 15px;
     font-weight: normal;
     margin: 0;
     padding: 0;
+    color: coral;
 }
 
 button {
-    background-color: #071596;
+    background-color: #2b7c0b;
 }
 
 .specialButton {
+    font-size: 10px;
     background-color: firebrick;
     color: honeydew;
 }
